<resources>
    <string name="hello">Hello World, TimelineActivity!</string>
    <string name="app_name">Flanaria</string>
    <string name="app_version_value">1</string>
    <string name="app_version_name">α0.0.0.0</string>
    <string name="app_copyright">© 霊烏路 地(@Nucleareal) 2012</string>
    <string name="ImageView_Replace_Text">アイコン</string>
    <string name="Tweet_Default_Names">{Name} @{ScreenName}</string>
    <string name="Tweet_Default_Text">{Text}</string>
    <string name="Tweet_Default_Via">via {Via} at {Time}</string>
    <string name="Tweet_Default_Retweeted">Retweeted</string>
    <string name="SP_Accounts_TokenA">User_AKey[{Number}]</string>
    <string name="SP_Accounts_TokenB">User_ASec[{Number}]</string>
    <string name="SP_Accounts_Active">User_Active[{Number}]</string>
    <string name="SP_Accounts_FallBackTo">User_FallBackto[{Number}]</string>
    <string name="SP_Query_CompareType_String">CompareType_String[{Number}]</string>
    <string name="SP_Query_MatchType_String">MatchType_String[{Number}]</string>
    <string name="SP_Query_MuteSource_String">MuteSource_String[{Number}]</string>
    <string name="SP_Query_CompareText_String">TweetText_String[{Number}]</string>
    <string name="SP_Query_EnableRetweet_String">EnableRetweet_String[{Number}]</string>
    <string name="SP_Query_CompareType_Long">CompareType_Long[{Number}]</string>
    <string name="SP_Query_MatchType_Long">MatchType_Long[{Number}]</string>
    <string name="SP_Query_MuteSource_Long">MuteSource_Long[{Number}]</string>
    <string name="SP_Query_CompareText_Long">TweetText_Long[{Number}]</string>
    <string name="SP_Query_EnableRetweet_Long">EnableRetweet_Long[{Number}]</string>
    <string name="Notify_Text">{From} {Type} {to}</string>
    <string name="Loading">Loading…</string>
    <string name="Source_Message">Somewhere</string>
    <string name="SP_Query_Easy">QueryEasy</string>
    <string name="SP_Query_Lunatic">QueryLunatic</string>
    <string name="Load_Friends_Completed">Friends Load Completed.</string>
    <string name="Load_Users_Title">ちょっと待ってね</string>
    <string name="Load_Users_Message">ユーザー読込中だよ…</string>
    <string name="Filter_Make_0">が</string>
    <string name="Filter_String_Source_Description">Source</string>
    <string name="Filter_String_ContentType_Description">WordType</string>
    <string name="Filter_String_MatchType_Description">MatchType</string>
    <string name="Settings_Visible_Title">表示</string>
    <string name="Settings_Visible_Summary">表示に関する設定</string>
    	<string name="Settings_Visible_PostAct_Title">投稿画面</string>
    		<string name="Settings_Visible_PostAct_NewElement_Title">最新ツイートを表示</string>
    		<string name="Settings_Visible_PostAct_NewElement_Summary">UserStreams有効時のみ有効</string>
    		<string name="Visiable_PostAct_NewElement_Key">PostActivityVisiableNewElement</string>
    <string name="Settings_Post_Title">投稿</string>
    <string name="Settings_Post_Summary">投稿に関する設定</string>
    <string name="Settings_Notify_Title">通知</string>
    <string name="Settings_Notify_Summary">通知に関する設定</string>
    	<string name="Settings_Notify_Category_Title">通知</string>
    		<string name="Settings_Notify_Category_Available_Title">通知を有効にする</string>
    		<string name="Settings_Notify_Category_Available_Summary">各種通知を有効にします</string>
    		<string name="Settings_Notify_Category_Type_Title">通知する種類</string>
    		<string name="Settings_Notify_Category_Type_Summary">通知する種類</string>
    <string name="Filter_Long_Source_Description">Source</string>
    <string name="Filter_Long_MatchType_Description">MatchType</string>
    <string name="Stream_Pause">Pause</string>
    <string name="Stream_Restart">Restart</string>
    <string name="Refresh_Content_Title">Setting Contents</string>
	<string name="Refresh_Content_Message">Waiting…</string>
	<string name="Refresh_Title">Refreshing</string>
	<string name="Refresh_Message">Waiting…</string>
	<string name="MissingImage">Image</string>
    <string name="Filter_String_Source_0">ScreenName</string>
    <string name="Filter_String_Source_1">Name</string>
    <string name="Filter_String_Source_2">Source</string>
    <string name="Filter_String_Source_3">SourceURL</string>
    <string name="Filter_String_Source_4">StatusText</string>
    <string name="Filter_String_ContentType_0">語句</string>
    <string name="Filter_String_ContentType_1">正規表現</string>
    <string name="Filter_String_MatchType_0">を含む</string>
    <string name="Filter_String_MatchType_1">と完全一致</string>
    <string name="Filter_Long_Source_0">UserID</string>
    <string name="Filter_Long_Source_1">StatusID</string>
    <string name="Filter_Long_MatchType_0">と等価</string>
    <string name="Filter_Long_MatchType_1">超過</string>
    <string name="Filter_Long_MatchType_2">未満</string>
    <string name="Filter_Long_MatchType_3">以上</string>
    <string name="Filter_Long_MatchType_4">以下</string>
    <string name="Filter_Long_MatchType_5">以外</string>
    <string name="Filter_Long_MatchType_6">を含む</string>
    <string name="Query_Menu_Action_Edit">編集</string>
    <string name="Query_Menu_Action_Copy">複製</string>
    <string name="Query_Menu_Action_Delete">削除</string>
    <string name="Query_SelectType_String">文字列</string>
    <string name="Query_SelectType_Long">数値</string>
    <string name="Query_SelectType_Title">フィルタータイプ</string>
    <string name="Query_Edit_Title">編集</string>
    <string name="Account_Set_No_Fallback">フォールバックしない</string>
	<string name="Account_FallBack_Summary">\@{ScreenName}のフォールバック先</string>
    <string name="Authorize_Pre_Title">アカウントの認証</string>
    <string name="Authorize_Pre_Message">"これからTwitterの認証ページが表示されるから、ログインして右下の認証を押してね。わかった？"</string>
    <string name="Authorize_Pre_Positive">はい</string>
   	<string name="Authorize_Failed">うう、認証に失敗しちゃったよ…</string>
    <string name="Authorize_Success">"認証に成功したよ！\n{Name}さんよろしくね！"</string>
    <string name="WebView_Waiting">通信中だよ。ちょっと待ってね…</string>
    <string name="Authorize_SubmitButton">認証</string>
    <string name="Authorize_ReDialog_Title">アカウントの追加</string>
    <string name="Authorize_ReDialog_Message">続けてほかのアカウントを認証する？</string>
    <string name="Authorize_ReDialog_Yes">はい</string>
    <string name="Authorize_ReDialog_No">いいえ</string>
    <string name="Authorize_ReWaiting_Title">順番待ち</string>
    <string name="Authorize_ReWaiting_Message">前のアカウントの認証完了を待っています…</string>
    <string name="ProgressBar_Text">読み込み中…</string>
    <string name="Timeline_LoadUser_Title">読込中</string>
    <string name="Timeline_LoadUser_Message">アカウント情報を読み込んでるよ…</string>
    <string name="Timeline_LoadStatus_Title">読込中</string>
    <string name="Timeline_LoadStatus_Message">タイムラインを読み込んでるよ…</string>
    <string name="Timeline_LoadStatus_Select_Title">読み込み種類</string>
    <string name="Timeline_LoadStatus_Select_Message">REST APIにする？それともUserStreamsにする？</string>
    <string name="Timeline_LoadStatus_Select_Positive">REST API</string>
    <string name="Timeline_LoadStatus_Select_Negative">UserStreams</string>
    <string name="Timeline_LoadStatus_Select_DontAskAgain">Set to Default</string>
    <string name="Settings_Mute_Title">ミュート</string>
    <string name="Settings_Mute_Summary">ミュートフィルタの設定</string>
    <string name="Settings_Mute_Category_Title">ミュート</string>
    <string name="Settings_Mute_Category_EnableMute_Title">ミュートを使用する</string>
    <string name="Settings_Mute_Category_EnableMute_Summary">ツイートのフィルタリングを有効にします</string>
    <string name="Settings_Mute_Category_SelectType_Title">ミュートの種類</string>
    <string name="Settings_Mute_Category_SelectType_Summary">フィルタリングの種類を設定します</string>
    <string name="Settings_Mute_Category_SelectType_Key0">Easy(簡易)</string>
    <string name="Settings_Mute_Category_SelectType_Key1">Hard(詳細)</string>
    <string name="Settings_Mute_Category_Setting_Title">フィルタ設定</string>
    <string name="Settings_Mute_Category_Setting_Summary"></string>
    <string name="Settings_Fallback_Title">フォールバック</string>
    <string name="Settings_Fallback_Summary">フォールバックの設定</string>
    <string name="Settings_Fallback_To_Title">フォールバックユーザー</string>
    <string name="Settings_Active_Title">アクティブ</string>
    <string name="Settings_Active_Summary">アカウントのアクティブ状態の設定</string>
    <string name="Settings_Active_Category_Title">アクティブ</string>
    <string name="Settings_OnTap_Title">アクション</string>
    <string name="Settings_OnTap_Summary">TLを操作した時の動作</string>
    <string name="Settings_OnTap_SingleShort_Title">シングルタップ</string>
    <string name="Settings_OnTap_SingleLong_Title">ロングタップ</string>
    <string name="Settings_OnTap_Double_Title">ダブルタップ</string>
    <string name="Settings_OnTap_Fling_Title">フリック</string>
    <string name="Settings_OnTap_SingleShort_Left_Title">左</string>
    <string name="Settings_OnTap_SingleShort_Left_Summary">左短押し時の動作</string>
    <string name="Settings_OnTap_SingleShort_Middle_Title">中</string>
    <string name="Settings_OnTap_SingleShort_Middle_Summary">中短押し時の動作</string>
    <string name="Settings_OnTap_SingleShort_Right_Title">右</string>
    <string name="Settings_OnTap_SingleShort_Right_Summary">右短押し時の動作</string>
    <string name="Settings_OnTap_SingleLong_Left_Title">左</string>
    <string name="Settings_OnTap_SingleLong_Left_Summary">左長押し時の動作</string>
    <string name="Settings_OnTap_SingleLong_Middle_Title">中</string>
    <string name="Settings_OnTap_SingleLong_Middle_Summary">中長押し時の動作</string>
    <string name="Settings_OnTap_SingleLong_Right_Title">右</string>
    <string name="Settings_OnTap_SingleLong_Right_Summary">右長押し時の動作</string>
    <string name="Settings_OnTap_Double_Left_Title">左</string>
    <string name="Settings_OnTap_Double_Left_Summary">左二回押し時の動作</string>
    <string name="Settings_OnTap_Double_Middle_Title">中</string>
    <string name="Settings_OnTap_Double_Middle_Summary">中二回押し時の動作</string>
    <string name="Settings_OnTap_Double_Right_Title">右</string>
    <string name="Settings_OnTap_Double_Right_Summary">右二回押し時の動作</string>
    <string name="Settings_OnTap_Fling_LeftToMiddle_Title">左→中</string>
    <string name="Settings_OnTap_Fling_LeftToMiddle_Summary">左→中フリック時の動作</string>
    <string name="Settings_OnTap_Fling_LeftToRight_Title">左→右</string>
    <string name="Settings_OnTap_Fling_LeftToRight_Summary">左→右フリック時の動作</string>
    <string name="Settings_OnTap_Fling_MiddleToLeft_Title">中→左</string>
    <string name="Settings_OnTap_Fling_MiddleToLeft_Summary">中→左フリック時の動作</string>
    <string name="Settings_OnTap_Fling_MiddleToRight_Title">中→右</string>
    <string name="Settings_OnTap_Fling_MiddleToRight_Summary">中→右フリック時の動作</string>
    <string name="Settings_OnTap_Fling_RightToMiddle_Title">右→中</string>
    <string name="Settings_OnTap_Fling_RightToLeft_Title">右→左</string>
    <string name="Settings_OnTap_Fling_RightToLeft_Summary">右→左フリック時の動作</string>
	<string name="Menu_Main_Settings_Title">Settings</string>
	<string name="Menu_Main_Settings_GiveBlood">Give your blood</string>
	<string name="Menu_Main_Settings_NoAction">No Action</string>
	<string name="Menu_Main_Settings_SearchAccounts">Search 2char Account</string>
    <string name="Post_Button_Text">投稿</string>
    <string name="Post_Count_Default">140</string>
    <string name="Filter_Make_ContainRetweet">リツイートも含む</string>
    <string name="StatusLoadWay_Default_Setting_Key">StatusLoadWayKey</string>
    <string name="StatusLoadWay_Default_Setting_Title">規定値を使用する</string>
    <string name="StatusLoadWay_Default_Setting_Summary">TL読み込み方法にデフォルト設定を使用する</string>
    <string name="Pref_ExtraSettings">FlanariaExtraSettings</string>
    <string name="Text_Version">Version</string>
    <string name="Pref_Copyright">著作権表示</string>
    <string name="Menu_Main_Stream_Title_Connect">Connect</string>
    <string name="Menu_Main_AddAccounts_Title">Add Account</string>
    <string name="Post_Button_UploadImage_Text">画像</string>
    <string name="Post_Button_Convert_Text">変換</string>
    <string name="Settings_Debug_Title">データ消去</string>
    <string name="Settings_Debug_Summary">各種データの消去を行います</string>
</resources>