<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/listview_selector"
    >
    <PreferenceScreen
        android:key="ActiveSettings"
        android:title="@string/Settings_Active_Title"
        android:summary="@string/Settings_Active_Summary"
        >
		<PreferenceCategory
		    android:key="ActiveSettings_Category"
		    android:title="@string/Settings_Active_Category_Title"
		>
		</PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="FallbackSettings"
        android:title="@string/Settings_Fallback_Title"
        android:summary="@string/Settings_Fallback_Summary"
        >
		<PreferenceCategory
		    android:key="FallSettings_To"
		    android:title="@string/Settings_Fallback_To_Title"
		>
		</PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="POSTSettings"
        android:title="@string/Settings_Post_Title"
        android:summary="@string/Settings_Post_Summary"
        android:enabled="false"
        >
    </PreferenceScreen>
    <PreferenceScreen
        android:key="NotifySettings"
        android:title="@string/Settings_Notify_Title"
        android:summary="@string/Settings_Notify_Summary"
        >
		<PreferenceCategory
		    android:key="NotifySettings_Category"
		    android:title="@string/Settings_Notify_Category_Title"
		>
			<CheckBoxPreference
			    android:key="NotifySettings_Category_Available"
			    android:title="@string/Settings_Notify_Category_Available_Title"
			    android:summary="@string/Settings_Notify_Category_Available_Summary"
			/>
			<ListPreference
			    android:key="NotifySettings_Category_Type"
			    android:title="@string/Settings_Notify_Category_Type_Title"
			    android:summary="@string/Settings_Notify_Category_Type_Summary"
			/>
		</PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="VisibleSettings"
        android:title="@string/Settings_Visible_Title"
        android:summary="@string/Settings_Visible_Summary"
        >
        <PreferenceCategory
            android:key="Visible_PostAct_Category"
            android:title="@string/Settings_Visible_PostAct_Title"
        	> 
        	<CheckBoxPreference
        	    android:key="@string/Visiable_PostAct_NewElement_Key"
        	    android:title="@string/Settings_Visible_PostAct_NewElement_Title"
        	    android:summary="@string/Settings_Visible_PostAct_NewElement_Summary"
        	/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="MuteSettings"
        android:title="@string/Settings_Mute_Title"
        android:summary="@string/Settings_Mute_Summary"
        >
        <PreferenceCategory
            android:key="MuteSettings_Category"
        	android:title="@string/Settings_Mute_Category_Title"
        >
			<CheckBoxPreference
			    android:key="MuteSettings_Category_EnableMute"
                android:title="@string/Settings_Mute_Category_EnableMute_Title"
                android:summary="@string/Settings_Mute_Category_EnableMute_Summary"
			/>
			<ListPreference
			    android:key="MuteSettings_Category_SelectType"
                android:title="@string/Settings_Mute_Category_SelectType_Title"
                android:summary="@string/Settings_Mute_Category_SelectType_Summary"
                android:dependency="MuteSettings_Category_EnableMute"
				android:entries="@array/Mute_Category_SelectType_EntryKeys"
				android:entryValues="@array/Mute_Category_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<Preference
			    android:key="MuteSettings_Category_SettingFilter"
			    android:title="@string/Settings_Mute_Category_Setting_Title"
			    android:summary="@string/Settings_Mute_Category_Setting_Summary"
			    android:dependency="MuteSettings_Category_EnableMute"
			/>
        </PreferenceCategory>
	</PreferenceScreen>
    <PreferenceScreen
        android:key="OnTapSettings"
        android:title="@string/Settings_OnTap_Title"
        android:summary="@string/Settings_OnTap_Summary"
    	>
        <PreferenceCategory
            android:key="OnTapSettings_SingleShort"
            android:title="@string/Settings_OnTap_SingleShort_Title"
            >
			<ListPreference
			    android:key="OnTapSettings_SingleShort_Left"
                android:title="@string/Settings_OnTap_SingleShort_Left_Title"
                android:summary="@string/Settings_OnTap_SingleShort_Left_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="1"
			/>
			<ListPreference
			    android:key="OnTapSettings_SingleShort_Middle"
                android:title="@string/Settings_OnTap_SingleShort_Middle_Title"
                android:summary="@string/Settings_OnTap_SingleShort_Middle_Summary"
                 android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="2"
			/>
			<ListPreference
			    android:key="OnTapSettings_SingleShort_Right"
                android:title="@string/Settings_OnTap_SingleShort_Right_Title"
                android:summary="@string/Settings_OnTap_SingleShort_Right_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="8"
			/>
        </PreferenceCategory>
		<PreferenceCategory
            android:key="OnTapSettings_SingleLong"
            android:title="@string/Settings_OnTap_SingleLong_Title"
            >
			<ListPreference
			    android:key="OnTapSettings_SingleLong_Left"
                android:title="@string/Settings_OnTap_SingleLong_Left_Title"
                android:summary="@string/Settings_OnTap_SingleLong_Left_Summary"
                 android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="3"
			/>
			<ListPreference
			    android:key="OnTapSettings_SingleLong_Middle"
                android:title="@string/Settings_OnTap_SingleLong_Middle_Title"
                android:summary="@string/Settings_OnTap_SingleLong_Middle_Summary"
                 android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="11"
			/>
			<ListPreference
			    android:key="OnTapSettings_SingleLong_Right"
                android:title="@string/Settings_OnTap_SingleLong_Right_Title"
                android:summary="@string/Settings_OnTap_SingleLong_Right_Summary"
                 android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="5"
			/>
        </PreferenceCategory>
        <PreferenceCategory
            android:key="OnTapSettings_Double"
            android:title="@string/Settings_OnTap_Double_Title"
            >
			<ListPreference
			    android:key="OnTapSettings_Double_Left"
                android:title="@string/Settings_OnTap_Double_Left_Title"
                android:summary="@string/Settings_OnTap_Double_Left_Summary"
                 android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Double_Middle"
                android:title="@string/Settings_OnTap_Double_Middle_Title"
                android:summary="@string/Settings_OnTap_Double_Middle_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Double_Right"
                android:title="@string/Settings_OnTap_Double_Right_Title"
                android:summary="@string/Settings_OnTap_Double_Right_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
        </PreferenceCategory>
        <PreferenceCategory
            android:key="OnTapSettings_Fling"
            android:title="@string/Settings_OnTap_Fling_Title"
            >
			<ListPreference
			    android:key="OnTapSettings_Fling_LeftToMiddle"
                android:title="@string/Settings_OnTap_Fling_LeftToMiddle_Title"
                android:summary="@string/Settings_OnTap_Fling_LeftToMiddle_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Fling_LeftToRight"
                android:title="@string/Settings_OnTap_Fling_LeftToRight_Title"
                android:summary="@string/Settings_OnTap_Fling_LeftToRight_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Fling_MiddleToLeft"
                android:title="@string/Settings_OnTap_Fling_MiddleToLeft_Title"
                android:summary="@string/Settings_OnTap_Fling_MiddleToLeft_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Fling_MiddleToRight"
                android:title="@string/Settings_OnTap_Fling_MiddleToRight_Title"
                android:summary="@string/Settings_OnTap_Fling_MiddleToRight_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Fling_RightToLeft"
                android:title="@string/Settings_OnTap_Fling_RightToLeft_Title"
                android:summary="@string/Settings_OnTap_Fling_RightToLeft_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
			<ListPreference
			    android:key="OnTapSettings_Fling_RightToMiddle"
                android:title="@string/Settings_OnTap_Fling_RightToMiddle_Title"
                android:summary="@string/Settings_OnTap_Fling_LeftToMiddle_Summary"
                android:entries="@array/OnTap_SelectType_EntryKeys"
				android:entryValues="@array/OnTap_SelectType_EntryValues"
				android:defaultValue="0"
			/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:key="DebugSettings"
        android:title="@string/Settings_Debug_Title"
        android:summary="@string/Settings_Debug_Summary"
        android:enabled="false"
    >
    </PreferenceScreen>
    <CheckBoxPreference
	    android:key="@string/StatusLoadWay_Default_Setting_Key"
	    android:title="@string/StatusLoadWay_Default_Setting_Title"
	    android:summary="@string/StatusLoadWay_Default_Setting_Summary"
	/>
	<Preference
	    android:key="@string/Pref_ExtraSettings"
	    android:title="@string/Text_Version"
	    android:summary="@string/app_version_name"
	>
	</Preference>
	<Preference
	    android:key="@string/Pref_Copyright"
	    android:title="@string/app_name"
	    android:summary="@string/app_copyright"
	>
	</Preference>
</PreferenceScreen>