<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
	<Spinner
	    android:id="@+id/Spinner_Filter_Make_Source_String"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/Filter_String_Source"
	    android:prompt="@string/Filter_String_Source_Description"
	/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Filter_Make_0"
	/>
	<Spinner
	    android:id="@+id/Spinner_Filter_Make_ContentType_String"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/Filter_String_ContentType"
	    android:prompt="@string/Filter_String_ContentType_Description"
	/>
	<EditText
	    android:id="@+id/EditText_Filter_Make_Text_String"
	    android:inputType="none"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	/>
	<Spinner
	    android:id="@+id/Spinner_Filter_Make_MatchType_String"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/Filter_String_MatchType"
	    android:prompt="@string/Filter_String_MatchType_Description"
	/>
	<CheckBox
	    android:id="@+id/CheckBox_Filter_Make_ContainRetweet"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Filter_Make_ContainRetweet"
	/>
</LinearLayout>