<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
	<Spinner
	    android:id="@+id/Spinner_Filter_Make_Source_Long"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/Filter_Long_Source"
	    android:prompt="@string/Filter_Long_Source_Description"
	/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/Filter_Make_0"
	/>
	<EditText
	    android:id="@+id/EditText_Filter_Make_Text_Long"
	    android:inputType="number"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	/>
	<Spinner
	    android:id="@+id/Spinner_Filter_Make_MatchType_Long"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/Filter_Long_MatchType"
	    android:prompt="@string/Filter_Long_MatchType_Description"
	/>
	<CheckBox
	    android:id="@+id/CheckBox_Filter_Make_ContainRetweet"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Filter_Make_ContainRetweet"
	/>
</LinearLayout>