<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/listview_selector"
    >
    <FrameLayout
        android:id="@+id/Tweet_ColorFrame"
        android:minWidth="8dp"
        android:layout_width="8dp"
        android:layout_height="fill_parent"
        android:background="@color/TweetFrame_Default"
    ></FrameLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
    >
        <ImageView
	    	android:id="@+id/Tweet_ImageView"
	    	android:layout_width="52dp"
	    	android:layout_height="52dp"
	    	android:scaleType="fitXY"
	    	android:src="@drawable/av_download"
	    	android:contentDescription="@string/ImageView_Replace_Text"
		/>
    </FrameLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="8dp"
		android:paddingRight="8dp"
		android:paddingBottom="8dp"
	>
		<TextView
		    android:id="@+id/Tweet_Names"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/Tweet_Default_Names"
		    android:textSize="10dp"
		    android:textStyle="bold"
		    android:textColor="@color/Tweet_Text"
		/>
		<TextView
		    android:id="@+id/Tweet_Text"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/Tweet_Default_Text"
		    android:textSize="12dp"
		    android:textStyle="bold"
		    android:textColor="@color/Tweet_Text"
		/>
		<LinearLayout
		    android:id="@+id/Tweet_Frame"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		>
		</LinearLayout>
		<TextView
		    android:id="@+id/Tweet_Via"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/Tweet_Default_Via"
		    android:textSize="10dp"
		    android:textStyle="bold"
		    android:textColor="@color/Tweet_Text"
		/>
	</LinearLayout>
</LinearLayout>