<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/List_BackColor">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        >
	        <TextView
	    	    android:id="@+id/Post_TextView_LeftCharacterCount"
	    	    android:layout_width="40dp"
	    	    android:layout_height="wrap_content"
	    	    android:layout_gravity="center"
	    	    android:text="@string/Post_Count_Default"
	    	    android:gravity="center"
	    	    android:typeface="sans"
	    	    android:textSize="18sp"

	    	    android:paddingTop="8dp"
	    	    android:paddingBottom="8dp"
	    	/>
	    	<ImageButton
	    	    android:id="@+id/Post_Button_UploadImage"
	    	    android:layout_width="48dp"
	    	    android:layout_height="0dp"
	    	    android:typeface="serif"
	    	    android:layout_weight="1"
				android:background="@drawable/post_selector"
	    	    android:textColor="@android:color/white"
	    	    android:src="@drawable/content_picture"
	    	    android:contentDescription="@string/Post_Button_UploadImage_Text"

	    	    android:layout_marginTop="4dp"
	    	    android:layout_marginBottom="4dp"
	    	/>
	    	<ImageButton
	    	    android:id="@+id/Post_Button_Convert"
	    	    android:layout_width="48dp"
	    	    android:layout_height="0dp"
	    	    android:typeface="serif"
	    	    android:layout_weight="1"
				android:background="@drawable/post_selector"
	    	    android:textColor="@android:color/white"
	    	    android:src="@drawable/av_shuffle"
	    	    android:contentDescription="@string/Post_Button_Convert_Text"
	    	    android:layout_marginTop="4dp"
	    	    android:layout_marginBottom="4dp"
	    	/>
	    </LinearLayout>
	    <EditText
			android:layout_weight="1"
	        android:layout_width="0dip"
	        android:layout_height="fill_parent"
	        android:id="@+id/Post_EditText_PostText"
	        android:inputType="none"
	        android:gravity="top"
	        android:textSize="13sp"

	        android:layout_marginTop="4dp"
	        android:layout_marginBottom="4dp"
	    	/>
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:gravity="center_vertical"
	    	>
	    	<Button
	    	    android:id="@+id/Post_Button_PostButton"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="0dp"
	    	    android:text="@string/Post_Button_Text"
	    	    android:typeface="serif"
				android:background="@drawable/post_selector"
	    	    android:textColor="@android:color/white"
	    	    android:layout_weight="1"

	    	    android:paddingLeft="16dp"
	    	    android:paddingRight="16dp"

	    	    android:layout_marginLeft="4dp"
	    	    android:layout_marginRight="4dp"
	    	    android:layout_marginTop="4dp"
	    	    android:layout_marginBottom="4dp"
	    	/>
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout
	        android:id="@+id/Post_LinearLayout_AddedState"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	>
	    <ListView
	   	    android:id="@android:id/list"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	/>
	</LinearLayout>
</LinearLayout>